--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <html>
-<!-->This is the html index file, this is the page that users are greeted with<-->
+<!--This is the html index file, this is the page that users are greeted with-->
 
-<!-->Head (where all the behind the scenes work happens)<-->
+<!--Head (where all the behind the scenes work happens)-->
 <head>
 <title> Testing <title>
 <head>
 
-<!-->Body (where everything the user sees occurs)<-->
+<!--Body (where everything the user sees occurs)-->
 <body>
 Hello!
 <body>
