--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <!-- Head (where all the behind the scenes work happens)-->
   
 <head>
-<title> Testing <title>
-<head>
+<title> Testing </title>
+</head>
 
 <!-- Body (where everything the user sees occurs)-->
   
 <body>
 Hello!
-<body>
+</body>
 
 <html>
