--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <html>
-<!--This is the html index file, this is the page that users are greeted with -->
+<!-- This is the html index file, this is the page that users are greeted with-->
 
-<!--Head (where all the behind the scenes work happens)-->
+<!-- Head (where all the behind the scenes work happens)-->
+  
 <head>
-<title> Testing <title>
-<head>
+<title> Welcome! </title>
+</head>
 
-<!--Body (where everything the user sees occurs)-->
+<!-- Body (where everything the user sees occurs)-->
+  
 <body>
-Hello!
-<body>
+<img src="woodenbackdrop.png" alt="WoodenBackDrop" width="100%" height="100%" />
+</body>
 
-<html>
+</html>
