--- a/index.html
+++ b/index.html
@@ -1,16 +1,15 @@
 <html>
-<!-- This is the html index file, this is the page that users are greeted with-->
 
-<!-- Head (where all the behind the scenes work happens)-->
-  
 <head>
-<title> Testing </title>
-</head>
 
-<!-- Body (where everything the user sees occurs)-->
-  
+<head>
+
 <body>
-Hello!
-</body>
+
+<h1>Legit Site </h1>
+
+Minecraft was once rated R 50+
+
+<body>
 
 </html>
